# gajae-code

./: Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  dev-ci.yml
crates/pi-harness-core/: Cargo.toml
crates/pi-harness-core/src/: main.rs
crates/pi-natives/src/: edit_fuzzy.rs  hashline.rs  lib.rs  pty.rs
docs/: environment-variables.md  models.md  telegram-remote.md
issues/: README.md
schemas/: config.schema.json
scripts/: check-rust-scope.ts  ci-gjc-state-gates.ts
